--- a/laravel_online_shop/.gitignore
+++ b/laravel_online_shop/.gitignore
@@ -1,19 +1,63 @@
-/.phpunit.cache
-/node_modules
+# =========================
+# Laravel
+# =========================
+/vendor/
+/node_modules/
+
+# Environment files
+.env
+.env.*
+auth.json
+
+# Storage (keep folder structure)
+!/storage/app/.gitignore
+!/storage/app/public/.gitignore
+!/storage/framework/.gitignore
+!/storage/framework/cache/.gitignore
+!/storage/framework/cache/data/.gitignore
+!/storage/framework/sessions/.gitignore
+!/storage/framework/testing/.gitignore
+!/storage/framework/views/.gitignore
+!/storage/logs/.gitignore
+
+/storage/*.key
+
+# =========================
+# Cache & Build
+# =========================
+/bootstrap/cache/*
+!/bootstrap/cache/.gitignore
+
 /public/build
 /public/hot
 /public/storage
-/storage/*.key
-/vendor
-.env
-.env.backup
-.env.production
+
 .phpunit.result.cache
-Homestead.json
+/.phpunit.cache
+
+# =========================
+# Logs
+# =========================
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# =========================
+# Homestead
+# =========================
 Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
-/.vscode
+Homestead.json
+
+# =========================
+# IDE / OS
+# =========================
+.idea/
+.vscode/
+.fleet/
+
+# Windows
+Thumbs.db
+Desktop.ini
+
+# macOS
+.DS_Store
